--- a/app/css/style.css
+++ b/app/css/style.css
@@ -10,3 +10,32 @@
     font-size: 40px;
 
 }
+.funi{
+    width: fit-content;
+}
+.btn-cus{
+    width: 65px;
+    height: 40px;
+    text-transform: uppercase;
+    margin-left: 5px;
+    margin-right: 5px;
+}
+@media (min-width: 992px){
+    .img-lg-cus{
+        width: 33.33%;
+        height: unset;
+    }
+
+}
+
+h3{
+    font-size: 20px;
+}
+
+h4{
+    font-size: 20px;
+}
+
+footer p{
+    font-size: 14px;
+}
